--- a/MovieBioApp/Shared/NavMenu.razor
+++ b/MovieBioApp/Shared/NavMenu.razor
@@ -29,7 +29,7 @@
                         <a class="dropdown-item" href="Top200Actors">Top 200 Actors</a>
                         <a class="dropdown-item" href="Top200Directors">Top 200 Directors</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="">Surprise Me</a>
+                        <a class="dropdown-item" href="SurpriseMoviePage">Surprise Me</a>
                     </div>
                 </div>
                 <li class="nav-item navSearchItem">
@@ -58,7 +58,7 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+    
 
-   
 
 }
