--- a/MovieBioApp/Pages/Top200Directors.razor
+++ b/MovieBioApp/Pages/Top200Directors.razor
@@ -26,7 +26,7 @@ else
             <div class="col-md-4">Name</div>
             <div class="col-md-2">Rating</div>
             <div class="col-md-2">Date of birth</div>
-            <div class="col-md-2">Top Directed Movie</div>
+            <div class="col-md-2">Known For</div>
             <div class="col-md-2">Picture</div>
         </div>
 
@@ -50,7 +50,7 @@ else
                 </div>
 
                 <div class="col-md-2">
-                    <div><img src="@tmdbapiObj[director.id].results[0].profile_path" alt="No image for this movie" width="100%"></div>
+                    <div><img src="@tmdbapiObj[director.id].results[0].profile_path" alt="No image for this Director" width="100%"></div>
                 </div>
             </div>
         }
